[tool.poetry]
name = "reflex-survey"
version = "0.1.0"
description = ""
authors = ["wenke.lai <wenke.studio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# main
reflex = "^0.5.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
